--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -143,7 +143,8 @@
         app:layout_constraintEnd_toStartOf="@+id/button_register"
         app:layout_constraintHorizontal_chainStyle="packed"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button_google_login" />
+        app:layout_constraintTop_toBottomOf="@+id/button_google_login"
+        app:layout_constraintVertical_bias="0.195" />
 
     <Button
         android:id="@+id/button_register"
