--- a/app/src/main/res/layout/collection_item.xml
+++ b/app/src/main/res/layout/collection_item.xml
@@ -3,13 +3,13 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="?android:selectableItemBackground">
 
     <ImageView
         android:id="@+id/collection_thumbnail_imageview"
-        android:layout_width="200dp"
-        android:layout_height="250dp"
-        android:background="@color/orange"
+        android:layout_width="200sp"
+        android:layout_height="250sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -19,20 +19,18 @@
         android:id="@+id/collection_name_textview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="fantasy"
-        android:textSize="25dp"
-        android:layout_marginBottom="10dp"
-        android:layout_marginStart="10dp"
+        android:textSize="25sp"
+        android:layout_marginBottom="10sp"
+        android:layout_marginStart="10sp"
         app:layout_constraintBottom_toBottomOf="@+id/collection_thumbnail_imageview"
         app:layout_constraintStart_toStartOf="@+id/collection_thumbnail_imageview" />
 
     <ImageView
         android:id="@+id/collection_visibility_icon"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_marginBottom="10dp"
-        android:layout_marginRight="10dp"
-        android:src="@drawable/baseline_lock_outline_24"
+        android:layout_width="30sp"
+        android:layout_height="30sp"
+        android:layout_marginBottom="10sp"
+        android:layout_marginEnd="10sp"
         app:layout_constraintBottom_toBottomOf="@+id/collection_thumbnail_imageview"
         app:layout_constraintEnd_toEndOf="@+id/collection_thumbnail_imageview" />
 
