--- a/app/src/main/res/layout/collection_item.xml
+++ b/app/src/main/res/layout/collection_item.xml
@@ -2,9 +2,12 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/collection_container"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:background="?android:selectableItemBackground">
+    android:background="?android:selectableItemBackground"
+    android:layout_marginTop="5dp"
+    android:layout_marginBottom="5dp">
 
     <ImageView
         android:id="@+id/collection_thumbnail_imageview"
@@ -22,8 +25,8 @@
         android:textSize="25sp"
         android:layout_marginBottom="10sp"
         android:layout_marginStart="10sp"
-        app:layout_constraintBottom_toBottomOf="@+id/collection_thumbnail_imageview"
-        app:layout_constraintStart_toStartOf="@+id/collection_thumbnail_imageview" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <ImageView
         android:id="@+id/collection_visibility_icon"
@@ -31,7 +34,7 @@
         android:layout_height="30sp"
         android:layout_marginBottom="10sp"
         android:layout_marginEnd="10sp"
-        app:layout_constraintBottom_toBottomOf="@+id/collection_thumbnail_imageview"
-        app:layout_constraintEnd_toEndOf="@+id/collection_thumbnail_imageview" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
