--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -7,7 +7,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fillViewport="true"
-    tools:context=".ui.main.ProfileFragment">
+    tools:context=".ui.main.ProfileFragment"
+    android:layout_marginBottom="100dp">
 
     <!-- TODO: Update profile fragment -->
     <LinearLayout
@@ -150,7 +151,7 @@
             android:id="@+id/recyclerview_collections"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"/>
+            android:layout_marginTop="5dp"/>
 
     </LinearLayout>
 
