--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,12 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+
+<androidx.core.widget.NestedScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+
+    >
+
+
+<androidx.constraintlayout.widget.ConstraintLayout
+
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".ui.main.HomeFragment">
+    android:layout_marginBottom="100dp"
+    tools:context=".ui.main.HomeFragment"
+
+    >
+
 
 
     <!--
@@ -67,24 +80,38 @@
         </androidx.recyclerview.widget.RecyclerView>
 
 
-
-
-
-
-
-
-
-    <!-- TODO da rimuovere -->
-    <Button
-        android:id="@+id/button_da_rimuovere"
+    <com.google.android.material.textview.MaterialTextView
+        android:id="@+id/textview_home_suggested"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="PROVA"
-        android:layout_gravity="center"
-        android:layout_marginTop="40dp"
+        style="@style/TextAppearance.Material3.LabelLarge"
+        android:text="@string/textview_home_suggested"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/trending_container"
+        android:layout_marginHorizontal="8dp"
+        android:layout_marginTop="10dp"
+        android:textSize="18sp"
+        />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/suggested_container"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="16dp"
+        android:layout_marginHorizontal="12dp"
+        android:orientation="horizontal"
+        app:layout_constraintTop_toBottomOf="@id/textview_home_suggested"
+        tools:listitem="@layout/book_home_item"
+        tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        >
+
+    </androidx.recyclerview.widget.RecyclerView>
+
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</androidx.core.widget.NestedScrollView>
