--- a/app/src/main/res/layout/book_search_item.xml
+++ b/app/src/main/res/layout/book_search_item.xml
@@ -19,8 +19,8 @@
 
             <ImageView
                 android:id="@+id/imageview_book_cover"
-                android:layout_width="100dp"
-                android:layout_height="140dp"
+                android:layout_width="90dp"
+                android:layout_height="125dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 android:layout_marginStart="8dp"
@@ -33,11 +33,15 @@
                 android:id="@+id/textview_book_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="30dp"
                 android:layout_marginTop="25dp"
+                android:layout_marginStart="30dp"
+                android:layout_marginEnd="60dp"
                 android:text="@string/placeholder_book_title"
                 app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toTopOf="@id/textview_book_description"
                 app:layout_constraintStart_toEndOf="@+id/imageview_book_cover"
+                android:ellipsize="end"
+                android:lines="1"
                 style="@style/TextAppearance.Material3.TitleMedium"
                 />
 
@@ -49,17 +53,20 @@
                 android:layout_marginTop="15dp"
                 android:text="@string/placeholder_book_description"
                 app:layout_constraintStart_toEndOf="@+id/imageview_book_cover"
+                app:layout_constraintEnd_toStartOf="@+id/imagebutton_add_icon"
                 app:layout_constraintTop_toBottomOf="@id/textview_book_title"
                 style="@style/TextAppearance.Material3.BodyMedium"
                 android:lines="3"
+                android:ellipsize="end"
                  />
 
 
             <ImageButton
-                android:id="@+id/imagebutton_clickable_icon"
+                android:id="@+id/imagebutton_add_icon"
                 android:layout_width="64dp"
                 android:layout_height="64dp"
                 android:layout_marginEnd="8dp"
+                android:layout_marginTop="20dp"
                 android:contentDescription="@string/content_description_add_to_bookshelf"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
