--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -110,6 +110,36 @@
 
     </androidx.recyclerview.widget.RecyclerView>
 
+    <com.google.android.material.textview.MaterialTextView
+        android:id="@+id/textview_home_recent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        style="@style/TextAppearance.Material3.LabelLarge"
+        android:text="@string/textview_new_books"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/suggested_container"
+        android:layout_marginHorizontal="8dp"
+        android:layout_marginTop="10dp"
+        android:textSize="18sp"
+        />
+
+
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recent_container"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="16dp"
+        android:layout_marginHorizontal="12dp"
+        android:orientation="horizontal"
+        app:layout_constraintTop_toBottomOf="@id/textview_home_recent"
+        tools:listitem="@layout/book_home_item"
+        tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        >
+
+    </androidx.recyclerview.widget.RecyclerView>
+
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
