--- a/app/src/main/res/layout/book_loading_home_item.xml
+++ b/app/src/main/res/layout/book_loading_home_item.xml
@@ -8,16 +8,17 @@
     android:orientation="vertical"
     android:layout_marginEnd="16dp">
 
-    <ImageView
-        android:id="@+id/book_cover"
+    <ProgressBar
+        android:id="@+id/progressbar_loading_book"
         android:layout_width="120dp"
         android:layout_height="180dp"
-        android:scaleType="centerCrop" />
+        android:layout_gravity="center_horizontal" />
 
     <TextView
         android:id="@+id/book_title"
         android:layout_width="120dp"
         android:layout_height="wrap_content"
+        android:text="@string/textview_loading"
         android:gravity="center"
         android:textColor="@android:color/black" />
 
