--- a/app/src/main/res/layout/comment_item.xml
+++ b/app/src/main/res/layout/comment_item.xml
@@ -14,7 +14,7 @@
         android:layout_height="wrap_content">
 
         <ImageView
-            android:id="@+id/load_comment"
+            android:id="@+id/comment_image"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_marginEnd="5dp"
@@ -26,7 +26,7 @@
             android:id="@+id/comment_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_toEndOf="@id/load_comment"
+            android:layout_toEndOf="@id/comment_image"
             android:text="@string/placeholder_comment_name"
             android:textColor="@color/black"
             android:textSize="16sp"
@@ -37,7 +37,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/comment_name"
-            android:layout_toEndOf="@id/load_comment"
+            android:layout_toEndOf="@id/comment_image"
             android:text="@string/placeholder_comment"
             android:textColor="@color/black" />
 
@@ -46,7 +46,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/comment_text"
-            android:layout_toEndOf="@id/load_comment"
+            android:layout_toEndOf="@id/comment_image"
             android:text="@string/placeholder_date" />
     </RelativeLayout>
 
