--- a/app/src/main/res/layout/fragment_book_details.xml
+++ b/app/src/main/res/layout/fragment_book_details.xml
@@ -145,6 +145,7 @@
                         android:contentDescription="TODO" />
 
                     <TextView
+                        android:id="@+id/textview_add_to"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/textview_icon_readlist"
@@ -201,6 +202,7 @@
                         />
 
                     <TextView
+                        android:id="@+id/textview_rating"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/textview_rating_order_label"
